# mamorx-review-system

./: .gitignore  README.md  SemanticScholar.py  clarity_guidelines.txt  clarity_review.txt  experiments_guidelines.txt  experiments_review.txt  final_review.txt  finall_summary.txt  limitation_guidelines.txt  limitation_review.txt  main.py  model.py  paper_1.txt  paper_2.txt  paper_4.txt  requirements.txt  singple_conversation.py  summary_1.txt  summary_2.txt  summary_3.txt  test.ipynb
Mamorx/: Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-crewai-0.51.1.txt  requirements.txt  run_evaluation_template.sh
Mamorx/MAMORX/: ReviewerWorkflow.py  reviewer_workflow.py  schemas.py  utils.py
Mamorx/MAMORX/custom_crewai/: task.py
Mamorx/MAMORX/custom_crewai_tools/: __init__.py  figure_tool.py  novelty_tool.py
Mamorx/MAMORX/figure_critic_rpc/: README.md  figure_client.py  figure_critic.proto  figure_critic_pb2.py  figure_critic_pb2.pyi  figure_critic_pb2_grpc.py  figure_server.py  figure_service.proto  figure_service_pb2.py  figure_service_pb2_grpc.py
Mamorx/MAMORX/review_generator/: baselines.py  multi_agent_reviewer.py
Mamorx/MAMORX/utils/: __init__.py  figure_critic.py  novelty_assessment.py  pdf_processor.py
Mamorx/MAMORX/utils/doc2json/: s2orc.py
Mamorx/MAMORX/utils/doc2json/grobid2json/: tei_to_json.py
Mamorx/config/: grobid_config.json
Mamorx/data_analysis/: arena_votes.csv  estimate_elo.py
Mamorx/evaluation/: main.py
Mamorx/infra/: docker-compose.yml
Mamorx/infra/nginx/: default.conf
Mamorx/services/mamorx_service/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  run_service_template.sh
Mamorx/services/mamorx_service/app/: config.py  main.py  redis.py  reviewer.py  schemas.py
Mamorx/services/mamorx_worker/: .dockerignore  Dockerfile  pyproject.toml  run_worker_template.sh
Mamorx/services/mamorx_worker/app/: config.py  main.py
Mamorx/services/papermage_service/: .dockerignore  Dockerfile  Makefile  README.md  figure_critic_server.py  main.py  pyproject.toml  run_service.sh  run_service_template.sh
Mamorx/services/web_service/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  rate-limits.db
Mamorx/services/web_service/api_docs/: openapi.json
Mamorx/services/web_service/public/: citation.bib
Mamorx/services/web_service/src/: middleware.ts
Mamorx/testing/: figure_client_tester.py  ollama-client-tester.py  ollama_client_tester.py
(+166 files in other folders)
