[tool.poetry]
name = "mamorx"
version = "0.1.0"
description = ""
authors = ["Guanshao Wang <placeholder@sample.com>", "Tong Zeng <placeholder@sample.com>", "Bradley Sides <placeholder@sample.com>", "Pawin Taechoyotin <pawin.taechoyotin@gmail.com>", "Daniel Acuna <placeholder@sample.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {version = "0.51.1", extras = ["tools"]}
anthropic = "^0.37.1"
langchain-aws = "0.1.17"
grobid-client-python = "^0.0.8"
lxml = "^5.3.0"
bs4 = "^0.0.2"
ratelimit = "^2.2.1"
boto3 = "1.34.162"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
